update translation of articles/  to Russian Reviewed by: andy Differential Revision: https://reviews.freebsd.org/D53675

--- a/documentation/content/ru/articles/contributing/_index.adoc
+++ b/documentation/content/ru/articles/contributing/_index.adoc
@@ -76,7 +76,7 @@ FreeBSD разрабатывает большое и постоянно раст
 Многие люди, участвующие в FreeBSD, не являются программистами. Проект включает в себя авторов документации, веб-дизайнеров и специалистов поддержки. Всё, что нужно этим людям для участия, — это вложение времени и готовность учиться.
 
 . Периодически перечитывайте FAQ и Руководство. Если что-то объяснено недостаточно ясно, неоднозначно, устарело или неверно, дайте нам знать. Ещё лучше — пришлите нам исправление (AsciiDoc несложно изучить, но можно присылать и обычный текст).
-. Помогите перевести документацию FreeBSD на ваш родной язык. Если документация уже существует на вашем языке, вы можете помочь перевести дополнительные документы или проверить, что переводы актуальны и корректны. Сначала ознакомьтесь с extref:{fdp-primer}[FAQ по переводам, translations] в Руководстве проекта документации FreeBSD. Вы не обязаны переводить каждую документацию FreeBSD — как волонтер, вы можете переводить столько, сколько пожелаете. Как только кто-то начинает переводить, к этому процессу почти всегда присоединяются другие. Если у вас есть время и силы перевести только часть документации, пожалуйста, переведите инструкции по установке.
+. Помогите перевести документацию FreeBSD на ваш родной язык. Если документация уже существует на вашем языке, вы можете помочь перевести дополнительные документы или проверить, что переводы актуальны и корректны. Сначала ознакомьтесь с extref:{fdp-primer}translations[FAQ по переводам, translations] в Руководстве проекта документации FreeBSD. Вы не обязаны переводить каждую документацию FreeBSD — как волонтер, вы можете переводить столько, сколько пожелаете. Как только кто-то начинает переводить, к этому процессу почти всегда присоединяются другие. Если у вас есть время и силы перевести только часть документации, пожалуйста, переведите инструкции по установке.
 . Читайте {freebsd-questions} время от времени (или даже регулярно). Может быть очень приятно делиться своими знаниями и помогать людям решать их проблемы; иногда вы даже можете узнать что-то новое для себя! Эти форумы также могут быть источником идей для улучшений.
 
 [[ongoing-programmer-tasks]]
@@ -126,7 +126,7 @@ https://wiki.freebsd.org/IdeasPage[Список проектов и идей Fre
 [[contrib-general]]
 === Отчеты об ошибках и общие комментарии
 
-Идея или предложение, представляющие _общий_ технический интерес, должны быть отправлены на {freebsd-hackers}. Аналогично, люди, заинтересованные в подобных вещах (и готовые терпеть _высокий_ объем почты!), могут подписаться на {freebsd-hackers}. Дополнительную информацию об этом и других списках рассылки см. в extref:{handbook}[The FreeBSD Handbook, eresources-mail].
+Идея или предложение, представляющие _общий_ технический интерес, должны быть отправлены на {freebsd-hackers}. Аналогично, люди, заинтересованные в подобных вещах (и готовые терпеть _высокий_ объем почты!), могут подписаться на {freebsd-hackers}. Дополнительную информацию об этом и других списках рассылки см. в extref:{handbook}eresources[The FreeBSD Handbook, eresources-mail].
 
 Если вы отправляете простой патч в репозиторий src, рассмотрите возможность отправить его в зеркало проекта на GitHub как https://github.com/freebsd/freebsd-src/pulls[запрос на включение]. Подходящие отправки должны:
 
@@ -158,7 +158,7 @@ https://wiki.freebsd.org/IdeasPage[Список проектов и идей Fre
 
 === Изменения в существующем исходном коде
 
-Добавление или изменение существующего исходного кода — это несколько более сложная задача, которая во многом зависит от того, насколько сильно вы отстали от текущего состояния разработки FreeBSD. Существует специальная постоянно обновляемая версия FreeBSD, известная как "FreeBSD-CURRENT", которая доступна различными способами для удобства разработчиков, активно работающих над системой. Подробнее о получении и использовании FreeBSD-CURRENT можно узнать в extref:{handbook}[Руководстве FreeBSD, current-stable].
+Добавление или изменение существующего исходного кода — это несколько более сложная задача, которая во многом зависит от того, насколько сильно вы отстали от текущего состояния разработки FreeBSD. Существует специальная постоянно обновляемая версия FreeBSD, известная как "FreeBSD-CURRENT", которая доступна различными способами для удобства разработчиков, активно работающих над системой. Подробнее о получении и использовании FreeBSD-CURRENT можно узнать в extref:{handbook}cutting-edge[Руководстве FreeBSD, current-stable].
 
 Работа с устаревшими исходниками, к сожалению, означает, что ваши изменения иногда могут быть слишком устаревшими или слишком расходящимися для лёгкого повторного включения в FreeBSD. Шансы на это можно несколько уменьшить, подписавшись на списки рассылки {freebsd-announce} и {freebsd-current}, где обсуждается текущее состояние системы.
 
@@ -203,7 +203,7 @@ https://wiki.freebsd.org/IdeasPage[Список проектов и идей Fre
 [[donations]]
 ==== Пожертвование средств
 
-https://www.freebsdfoundation.org[FreeBSD Foundation] — это некоммерческий, освобожденный от налогов фонд, созданный для поддержки целей проекта FreeBSD. Как организация 501(c)3, Фонд, как правило, освобожден от федерального подоходного налога США, а также от подоходного налога штата Колорадо. Пожертвования освобожденным от налогов организациям часто вычитаются из налогооблагаемого федерального дохода.
+https://www.freebsdfoundation.org[Фонд FreeBSD (FreeBSD Foundation)] — это некоммерческий, освобожденный от налогов фонд, созданный для поддержки целей проекта FreeBSD. Как организация 501(c)3, Фонд, как правило, освобожден от федерального подоходного налога США, а также от подоходного налога штата Колорадо. Пожертвования освобожденным от налогов организациям часто вычитаются из налогооблагаемого федерального дохода.
 
 Пожертвования можно отправить в виде чека по адресу:
 
@@ -317,7 +317,7 @@ USA
 +
 [NOTE]
 ======
-Пожалуйста, не отправляйте архив man:shar[1] всего порта; вместо этого используйте man:git-format-patch[1] или man:diff[1] `-ruN`. Таким образом, коммиттеры смогут гораздо проще увидеть, какие именно изменения были внесены. Раздел extref:{porters-handbook}[Обновление, port-upgrading] в Руководстве FreeBSD по созданию портов содержит дополнительную информацию.
+Пожалуйста, не отправляйте архив man:shar[1] всего порта; вместо этого используйте man:git-format-patch[1] или man:diff[1] `-ruN`. Таким образом, коммиттеры смогут гораздо проще увидеть, какие именно изменения были внесены. Раздел extref:{porters-handbook}upgrading[Обновление, port-upgrading] в Руководстве FreeBSD по созданию портов содержит дополнительную информацию.
 ======
 . Ждите
 +
