--- a/documentation/content/ru/articles/leap-seconds/_index.po
+++ b/documentation/content/ru/articles/leap-seconds/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-02-01 09:21-0300\n"
-"PO-Revision-Date: 2025-09-23 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-10 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesleap-seconds_index/ru/>\n"
@@ -22,8 +22,7 @@ msgstr ""
 #: documentation/content/en/articles/leap-seconds/_index.adoc:1
 #, no-wrap
 msgid "A short description of how leap seconds are handled on FreeBSD"
-msgstr ""
-"Краткое описание обработки високосных секунд (секунд координации) в FreeBSD"
+msgstr "Краткое описание обработки високосных секунд (секунд координации) в FreeBSD"
 
 #. type: Title =
 #: documentation/content/en/articles/leap-seconds/_index.adoc:1
@@ -96,17 +95,17 @@ msgstr "Обработка високосных секунд по умолчан
 #: documentation/content/en/articles/leap-seconds/_index.adoc:62
 msgid ""
 "The easiest way to handle leap seconds is with the POSIX time rules FreeBSD "
-"uses by default, combined with extref:{handbook}[NTP, network-ntp].  When "
-"man:ntpd[8] is running and the time is synchronized with upstream NTP "
-"servers that handle leap seconds correctly, the leap second will cause the "
-"system time to automatically repeat the last second of the day.  No other "
-"adjustments are necessary."
+"uses by default, combined with extref:{handbook}network-servers[NTP, network-"
+"ntp].  When man:ntpd[8] is running and the time is synchronized with "
+"upstream NTP servers that handle leap seconds correctly, the leap second "
+"will cause the system time to automatically repeat the last second of the "
+"day.  No other adjustments are necessary."
 msgstr ""
 "Самый простой способ обработки високосных секунд — использование правил "
 "времени POSIX, которые FreeBSD использует по умолчанию, в сочетании с "
-"extref:{handbook}[NTP, network-ntp]. Когда man:ntpd[8] работает и время "
-"синхронизировано с вышестоящими серверами NTP, которые корректно "
-"обрабатывают високосные секунды, високосная секунда приведёт к "
+"extref:{handbook}network-servers[NTP, network-ntp]. Когда man:ntpd[8] "
+"работает и время синхронизировано с вышестоящими серверами NTP, которые "
+"корректно обрабатывают високосные секунды, високосная секунда приведёт к "
 "автоматическому повтору последней секунды дня в системном времени. Другие "
 "корректировки не требуются."
 
