--- a/documentation/content/ru/articles/linux-users/_index.adoc
+++ b/documentation/content/ru/articles/linux-users/_index.adoc
@@ -54,14 +54,14 @@ toc::[]
 
 В этом документе освещаются некоторые технические различия между FreeBSD и Linux(R), чтобы пользователи Linux(R) среднего и продвинутого уровней могли быстро ознакомиться с основами FreeBSD.
 
-Этот документ предполагает, что FreeBSD уже установлена. Для получения помощи по процессу установки обратитесь к главе extref:{handbook}[Установка FreeBSD, bsdinstall] Руководства FreeBSD.
+Этот документ предполагает, что FreeBSD уже установлена. Для получения помощи по процессу установки обратитесь к главе extref:{handbook}bsdinstall[Установка FreeBSD, bsdinstall] Руководства FreeBSD.
 
 [[shells]]
 == Стандартная оболочка
 
 Пользователи Linux(R) часто удивляются, обнаружив, что Bash не является оболочкой по умолчанию в FreeBSD. На самом деле, Bash не включён в стандартную установку. Вместо этого используется совместимая с Bourne shell оболочка man:sh[1] в качестве оболочки пользователя по умолчанию. Оболочка root — это man:tcsh[1] по умолчанию в FreeBSD 13 и более ранних версиях и man:sh[1] в FreeBSD 14 и позднее. Оболочка man:sh[1] очень похожа на Bash, но имеет гораздо меньший набор возможностей. Как правило, скрипты, написанные для man:sh[1], будут работать в Bash, но обратное не всегда верно.
 
-Однако Bash и другие оболочки доступны для установки через extref:{handbook}[Коллекцию портов и пакетов FreeBSD, ports].
+Однако Bash и другие оболочки доступны для установки через extref:{handbook}ports[Коллекцию портов и пакетов FreeBSD, ports].
 
 После установки другой оболочки используйте man:chsh[1], чтобы изменить оболочку пользователя по умолчанию. Рекомендуется оставить оболочку пользователя `root` без изменений, поскольку оболочки, не входящие в базовую поставку, устанавливаются в [.filename]#/usr/local/bin#. В случае возникновения проблемы файловая система, в которой находится [.filename]#/usr/local/bin#, может быть не смонтирована. В такой ситуации у `root` не будет доступа к своей оболочке по умолчанию, что помешает ему войти в систему и устранить проблему.
 
@@ -93,14 +93,14 @@ FreeBSD предоставляет два метода установки при
 # pkg install apache24
 ....
 
-Для получения дополнительной информации о пакетах обратитесь к разделу 4.4 Руководства FreeBSD: extref:{handbook}ports/[Использование pkg для управления бинарными пакетами, pkgng-intro].
+Для получения дополнительной информации о пакетах обратитесь к разделу 4.4 Руководства FreeBSD: extref:{handbook}ports[Использование pkg для управления бинарными пакетами, pkgng-intro].
 
 [[ports]]
 === Порты
 
 Коллекция портов FreeBSD — это набор [.filename]#Makefile# и патчей, специально адаптированных для установки приложений из исходного кода в FreeBSD. При установке порта система загрузит исходный код, применит необходимые патчи, скомпилирует код и установит приложение вместе с требуемыми зависимостями.
 
-Коллекция портов, иногда называемая деревом портов, может быть установлена в [.filename]#/usr/ports# с помощью link:{handbook}mirrors/#git[Git]. Подробные инструкции по установке Коллекции портов можно найти в extref:{handbook}ports/[разделе 4.5.1, ports-using-installation-methods] Руководства FreeBSD.
+Коллекция портов, иногда называемая деревом портов, может быть установлена в [.filename]#/usr/ports# с помощью link:{handbook}mirrors/#git[Git]. Подробные инструкции по установке Коллекции портов можно найти в extref:{handbook}ports[разделе 4.5.1, ports-using-installation-methods] Руководства FreeBSD.
 
 Для сборки порта перейдите в его каталог и запустите процесс сборки. В следующем примере устанавливается Apache 2.4 из коллекции портов:
 
@@ -118,7 +118,7 @@ FreeBSD предоставляет два метода установки при
 # make WITH_LDAP="YES" install clean
 ....
 
-Обратитесь к extref:{handbook}ports/[Использование коллекции портов, ports-using] для получения дополнительной информации.
+Обратитесь к extref:{handbook}ports[Использование коллекции портов, ports-using] для получения дополнительной информации.
 
 [[startup]]
 == Загрузка системы
@@ -127,7 +127,7 @@ FreeBSD предоставляет два метода установки при
 
 Скрипты, расположенные в [.filename]#/etc/rc.d/#, предназначены для приложений, входящих в "базовую" систему, таких как man:cron[8], man:sshd[8] и man:syslog[3]. Скрипты в [.filename]#/usr/local/etc/rc.d/# предназначены для пользовательских приложений, таких как Apache и Squid.
 
-Поскольку FreeBSD разрабатывается как полноценная операционная система, пользовательские приложения не считаются частью «базовой» системы. Пользовательские приложения обычно устанавливаются с помощью extref:{handbook}ports/[Пакетов или Портов, ports-using]. Чтобы отделить их от базовой системы, пользовательские приложения устанавливаются в [.filename]#/usr/local/#. Таким образом, исполняемые файлы пользовательских приложений находятся в [.filename]#/usr/local/bin/#, конфигурационные файлы — в [.filename]#/usr/local/etc/# и так далее.
+Поскольку FreeBSD разрабатывается как полноценная операционная система, пользовательские приложения не считаются частью «базовой» системы. Пользовательские приложения обычно устанавливаются с помощью extref:{handbook}ports[Пакетов или Портов, ports-using]. Чтобы отделить их от базовой системы, пользовательские приложения устанавливаются в [.filename]#/usr/local/#. Таким образом, исполняемые файлы пользовательских приложений находятся в [.filename]#/usr/local/bin/#, конфигурационные файлы — в [.filename]#/usr/local/etc/# и так далее.
 
 Сервисы включаются путем добавления соответствующей записи в файл [.filename]#/etc/rc.conf#. Системные параметры по умолчанию находятся в файле [.filename]#/etc/defaults/rc.conf#, а настройки по умолчанию переопределяются параметрами из файла [.filename]#/etc/rc.conf#. Подробнее о доступных параметрах можно узнать в man:rc.conf[5]. При установке дополнительных приложений ознакомьтесь с сообщением установки, чтобы определить, как включить связанные сервисы.
 
@@ -201,9 +201,9 @@ ifconfig_em0="DHCP"
 
 FreeBSD не использует Linux(R) IPTABLES для своего межсетевого экрана. Вместо этого FreeBSD предлагает выбор из трёх межсетевых экранов на уровне ядра:
 
-* extref:{handbook}[PF, firewalls-pf]
-* extref:{handbook}[IPFILTER, firewalls-ipf]
-* extref:{handbook}[IPFW, firewalls-ipfw]
+* extref:{handbook}firewalls[PF, firewalls-pf]
+* extref:{handbook}firewalls[IPFILTER, firewalls-ipf]
+* extref:{handbook}firewalls[IPFW, firewalls-ipfw]
 
 PF разработан проектом OpenBSD и портирован в FreeBSD. PF был создан как замена для IPFILTER, и его синтаксис схож с синтаксисом IPFILTER. PF может использоваться совместно с man:altq[4] для обеспечения функций QoS.
 
@@ -252,7 +252,7 @@ ipfw add allow tcp from any to me 22 in via $ext_if
 
 ====
 
-Для получения дополнительной информации об обновлениях исходного кода и бинарных обновлениях обратитесь к extref:{handbook}cutting-edge/[главе об обновлениях, updating-upgrading-freebsdupdate] в Руководстве FreeBSD.
+Для получения дополнительной информации об обновлениях исходного кода и бинарных обновлениях обратитесь к extref:{handbook}cutting-edge[главе об обновлениях, updating-upgrading-freebsdupdate] в Руководстве FreeBSD.
 
 [[procfs]]
 == procfs: ушёл, но не забыт
