--- a/documentation/content/ru/articles/linux-users/_index.po
+++ b/documentation/content/ru/articles/linux-users/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-09-14 14:59-0300\n"
-"PO-Revision-Date: 2025-08-06 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-10 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articleslinux-users_index/ru/>\n"
@@ -22,9 +22,7 @@ msgstr ""
 #: documentation/content/en/articles/linux-users/_index.adoc:1
 #, no-wrap
 msgid "This document is intended to quickly familiarize intermediate to advanced Linux® users with the basics of FreeBSD."
-msgstr ""
-"Этот документ предназначен для быстрого ознакомления с основами FreeBSD "
-"пользователей Linux® среднего и продвинутого уровня."
+msgstr "Этот документ предназначен для быстрого ознакомления с основами FreeBSD пользователей Linux® среднего и продвинутого уровня."
 
 #. type: YAML Front Matter: title
 #: documentation/content/en/articles/linux-users/_index.adoc:1
@@ -78,12 +76,12 @@ msgstr ""
 #: documentation/content/en/articles/linux-users/_index.adoc:58
 msgid ""
 "This document assumes that FreeBSD is already installed.  Refer to the "
-"extref:{handbook}[Installing FreeBSD, bsdinstall] chapter of the FreeBSD "
-"Handbook for help with the installation process."
+"extref:{handbook}bsdinstall[Installing FreeBSD, bsdinstall] chapter of the "
+"FreeBSD Handbook for help with the installation process."
 msgstr ""
 "Этот документ предполагает, что FreeBSD уже установлена. Для получения "
-"помощи по процессу установки обратитесь к главе extref:{handbook}[Установка "
-"FreeBSD, bsdinstall] Руководства FreeBSD."
+"помощи по процессу установки обратитесь к главе extref:{handbook}bsdinstall["
+"Установка FreeBSD, bsdinstall] Руководства FreeBSD."
 
 #. type: Title ==
 #: documentation/content/en/articles/linux-users/_index.adoc:60
@@ -115,10 +113,10 @@ msgstr ""
 #: documentation/content/en/articles/linux-users/_index.adoc:70
 msgid ""
 "However, Bash and other shells are available for installation using the "
-"FreeBSD extref:{handbook}[Packages and Ports Collection, ports]."
+"FreeBSD extref:{handbook}ports[Packages and Ports Collection, ports]."
 msgstr ""
-"Однако Bash и другие оболочки доступны для установки через extref:{handbook}["
-"Коллекцию портов и пакетов FreeBSD, ports]."
+"Однако Bash и другие оболочки доступны для установки через "
+"extref:{handbook}ports[Коллекцию портов и пакетов FreeBSD, ports]."
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:75
@@ -229,8 +227,8 @@ msgid ""
 "files on Red Hat/Fedora based systems.  Packages are installed using `pkg`.  "
 "For example, the following command installs Apache 2.4:"
 msgstr ""
-"Пакеты — это предварительно скомпилированные приложения, эквиваленты файлов ["
-".filename]#.deb# в системах на основе Debian/Ubuntu и файлов [.filename]#."
+"Пакеты — это предварительно скомпилированные приложения, эквиваленты файлов "
+"[.filename]#.deb# в системах на основе Debian/Ubuntu и файлов [.filename]#."
 "rpm# в системах на основе Red Hat/Fedora. Пакеты устанавливаются с помощью "
 "`pkg`. Например, следующая команда устанавливает Apache 2.4:"
 
@@ -243,13 +241,13 @@ msgstr "# pkg install apache24\n"
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:110
 msgid ""
-"For more information on packages refer to section 5.4 of the FreeBSD "
-"Handbook: extref:{handbook}[Using pkgng for Binary Package Management, pkgng-"
-"intro]."
+"For more information on packages refer to section 4.4 of the FreeBSD "
+"Handbook: extref:{handbook}ports[Using pkgng for Binary Package Management, "
+"pkgng-intro]."
 msgstr ""
 "Для получения дополнительной информации о пакетах обратитесь к разделу 4.4 "
-"Руководства FreeBSD: extref:{handbook}ports/[Использование pkg для "
-"управления бинарными пакетами, pkgng-intro]."
+"Руководства FreeBSD: extref:{handbook}ports[Использование pkg для управления "
+"бинарными пакетами, pkgng-intro]."
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:116
@@ -272,13 +270,13 @@ msgid ""
 "The Ports Collection, sometimes referred to as the ports tree, can be "
 "installed to [.filename]#/usr/ports# using link:{handbook}mirrors/"
 "#git[Git].  Detailed instructions for installing the Ports Collection can be "
-"found in extref:{handbook}[section 4.5.1, ports-using-installation-methods] "
-"of the FreeBSD Handbook."
+"found in extref:{handbook}ports[section 4.5.1, ports-using-installation-"
+"methods] of the FreeBSD Handbook."
 msgstr ""
 "Коллекция портов, иногда называемая деревом портов, может быть установлена в "
 "[.filename]#/usr/ports# с помощью link:{handbook}mirrors/#git[Git]. "
 "Подробные инструкции по установке Коллекции портов можно найти в "
-"extref:{handbook}ports/[разделе 4.5.1, ports-using-installation-methods] "
+"extref:{handbook}ports[разделе 4.5.1, ports-using-installation-methods] "
 "Руководства FreeBSD."
 
 #. type: Plain text
@@ -324,10 +322,10 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:138
 msgid ""
-"Refer to extref:{handbook}[Using the Ports Collection, ports-using] for more "
-"information."
+"Refer to extref:{handbook}ports[Using the Ports Collection, ports-using] for "
+"more information."
 msgstr ""
-"Обратитесь к extref:{handbook}ports/[Использование коллекции портов, ports-"
+"Обратитесь к extref:{handbook}ports[Использование коллекции портов, ports-"
 "using] для получения дополнительной информации."
 
 #. type: Title ==
@@ -351,16 +349,15 @@ msgid ""
 "filename]#/etc/init.d/# on Linux(R) systems."
 msgstr ""
 "Многие дистрибутивы Linux(R) используют систему инициализации SysV, тогда "
-"как FreeBSD использует традиционный BSD-стиль man:init[8]. В BSD-стиле "
-"man:init[8] нет уровней запуска (run-levels), и файл [.filename]#/etc/"
-"inittab# отсутствует. Вместо этого запуск системы управляется сценариями "
-"man:rc[8]. При загрузке системы [.filename]#/etc/rc# читает [.filename]#/etc/"
-"rc.conf# и [.filename]#/etc/defaults/rc.conf#, чтобы определить, какие "
-"службы должны быть запущены. Указанные службы затем запускаются путем "
-"выполнения соответствующих сценариев инициализации, расположенных в [."
-"filename]#/etc/rc.d/# и [.filename]#/usr/local/etc/rc.d/#. Эти сценарии "
-"аналогичны сценариям, расположенным в [.filename]#/etc/init.d/# в системах "
-"Linux(R)."
+"как FreeBSD использует традиционный BSD-стиль man:init[8]. В BSD-стиле man:"
+"init[8] нет уровней запуска (run-levels), и файл [.filename]#/etc/inittab# "
+"отсутствует. Вместо этого запуск системы управляется сценариями man:rc[8]. "
+"При загрузке системы [.filename]#/etc/rc# читает [.filename]#/etc/rc.conf# и "
+"[.filename]#/etc/defaults/rc.conf#, чтобы определить, какие службы должны "
+"быть запущены. Указанные службы затем запускаются путем выполнения "
+"соответствующих сценариев инициализации, расположенных в [.filename]#/etc/rc."
+"d/# и [.filename]#/usr/local/etc/rc.d/#. Эти сценарии аналогичны сценариям, "
+"расположенным в [.filename]#/etc/init.d/# в системах Linux(R)."
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:150
@@ -371,8 +368,8 @@ msgid ""
 "installed applications such as Apache and Squid."
 msgstr ""
 "Скрипты, расположенные в [.filename]#/etc/rc.d/#, предназначены для "
-"приложений, входящих в \"базовую\" систему, таких как man:cron[8], "
-"man:sshd[8] и man:syslog[3]. Скрипты в [.filename]#/usr/local/etc/rc.d/# "
+"приложений, входящих в \"базовую\" систему, таких как man:cron[8], man:"
+"sshd[8] и man:syslog[3]. Скрипты в [.filename]#/usr/local/etc/rc.d/# "
 "предназначены для пользовательских приложений, таких как Apache и Squid."
 
 #. type: Plain text
@@ -381,16 +378,16 @@ msgid ""
 "Since FreeBSD is developed as a complete operating system, user-installed "
 "applications are not considered to be part of the \"base\" system.  User-"
 "installed applications are generally installed using extref:{handbook}"
-"[Packages or Ports, ports-using].  In order to keep them separate from the "
-"base system, user-installed applications are installed under [.filename]#/"
-"usr/local/#.  Therefore, user-installed binaries reside in [.filename]#/usr/"
-"local/bin/#, configuration files are in [.filename]#/usr/local/etc/#, and so "
-"on."
+"ports[Packages or Ports, ports-using].  In order to keep them separate from "
+"the base system, user-installed applications are installed under [."
+"filename]#/usr/local/#.  Therefore, user-installed binaries reside in [."
+"filename]#/usr/local/bin/#, configuration files are in [.filename]#/usr/"
+"local/etc/#, and so on."
 msgstr ""
 "Поскольку FreeBSD разрабатывается как полноценная операционная система, "
 "пользовательские приложения не считаются частью «базовой» системы. "
 "Пользовательские приложения обычно устанавливаются с помощью "
-"extref:{handbook}ports/[Пакетов или Портов, ports-using]. Чтобы отделить их "
+"extref:{handbook}ports[Пакетов или Портов, ports-using]. Чтобы отделить их "
 "от базовой системы, пользовательские приложения устанавливаются в [."
 "filename]#/usr/local/#. Таким образом, исполняемые файлы пользовательских "
 "приложений находятся в [.filename]#/usr/local/bin/#, конфигурационные файлы —"
@@ -408,12 +405,12 @@ msgid ""
 "services."
 msgstr ""
 "Сервисы включаются путем добавления соответствующей записи в файл [."
-"filename]#/etc/rc.conf#. Системные параметры по умолчанию находятся в файле ["
-".filename]#/etc/defaults/rc.conf#, а настройки по умолчанию переопределяются "
-"параметрами из файла [.filename]#/etc/rc.conf#. Подробнее о доступных "
-"параметрах можно узнать в man:rc.conf[5]. При установке дополнительных "
-"приложений ознакомьтесь с сообщением установки, чтобы определить, как "
-"включить связанные сервисы."
+"filename]#/etc/rc.conf#. Системные параметры по умолчанию находятся в файле "
+"[.filename]#/etc/defaults/rc.conf#, а настройки по умолчанию "
+"переопределяются параметрами из файла [.filename]#/etc/rc.conf#. Подробнее о "
+"доступных параметрах можно узнать в man:rc.conf[5]. При установке "
+"дополнительных приложений ознакомьтесь с сообщением установки, чтобы "
+"определить, как включить связанные сервисы."
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:162
@@ -583,18 +580,18 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:236
-msgid "extref:{handbook}[PF, firewalls-pf]"
-msgstr "extref:{handbook}[PF, firewalls-pf]"
+msgid "extref:{handbook}firewalls[PF, firewalls-pf]"
+msgstr "extref:{handbook}firewalls[PF, firewalls-pf]"
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:237
-msgid "extref:{handbook}[IPFILTER, firewalls-ipf]"
-msgstr "extref:{handbook}[IPFILTER, firewalls-ipf]"
+msgid "extref:{handbook}firewalls[IPFILTER, firewalls-ipf]"
+msgstr "extref:{handbook}firewalls[IPFILTER, firewalls-ipf]"
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:238
-msgid "extref:{handbook}[IPFW, firewalls-ipfw]"
-msgstr "extref:{handbook}[IPFW, firewalls-ipfw]"
+msgid "extref:{handbook}firewalls[IPFW, firewalls-ipfw]"
+msgstr "extref:{handbook}firewalls[IPFW, firewalls-ipfw]"
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:242
@@ -727,11 +724,11 @@ msgstr "0 3 * * * root /usr/sbin/freebsd-update cron\n"
 #: documentation/content/en/articles/linux-users/_index.adoc:295
 msgid ""
 "For more information on source and binary updates, refer to extref:{handbook}"
-"[the chapter on updating, updating-upgrading-freebsdupdate] in the FreeBSD "
-"Handbook."
+"cutting-edge[the chapter on updating, updating-upgrading-freebsdupdate] in "
+"the FreeBSD Handbook."
 msgstr ""
 "Для получения дополнительной информации об обновлениях исходного кода и "
-"бинарных обновлениях обратитесь к extref:{handbook}cutting-edge/[главе об "
+"бинарных обновлениях обратитесь к extref:{handbook}cutting-edge[главе об "
 "обновлениях, updating-upgrading-freebsdupdate] в Руководстве FreeBSD."
 
 #. type: Title ==
@@ -803,8 +800,8 @@ msgid ""
 "Including `noauto` will prevent [.filename]#/proc# from being automatically "
 "mounted at boot."
 msgstr ""
-"Добавление `noauto` предотвратит автоматическое монтирование [."
-"filename]#/proc# при загрузке."
+"Добавление `noauto` предотвратит автоматическое монтирование [.filename]#/"
+"proc# при загрузке."
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:327
