--- a/documentation/content/ru/articles/mailing-list-faq/_index.po
+++ b/documentation/content/ru/articles/mailing-list-faq/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:57-0300\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-10 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesmailing-list-faq_index/ru/>\n"
@@ -22,9 +22,7 @@ msgstr ""
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:1
 #, no-wrap
 msgid "How to best use the mailing lists, such as how to help avoid frequently-repeated discussions"
-msgstr ""
-"Как оптимально использовать почтовые рассылки, в том числе как избежать "
-"часто повторяющихся обсуждений"
+msgstr "Как оптимально использовать почтовые рассылки, в том числе как избежать часто повторяющихся обсуждений"
 
 #. type: Title =
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:1
@@ -43,20 +41,20 @@ msgstr "Аннотация"
 msgid ""
 "This is the FAQ for the FreeBSD mailing lists.  If you are interested in "
 "helping with this project, send email to the {freebsd-doc}.  The latest "
-"version of this document is always available from the link:.[FreeBSD World "
-"Wide Web server].  It may also be downloaded as one large link:.[HTML] file "
-"with HTTP or as plain text, PostScript, PDF, etc. from the https://"
-"download.freebsd.org/doc/[FreeBSD FTP server].  You may also want to "
-"link:https://www.FreeBSD.org/search/[Search the FAQ]."
+"version of this document is always available from the extref:{mailing-list-"
+"faq}[FreeBSD World Wide Web server].  It may also be downloaded as one large "
+"extref:{mailing-list-faq}[HTML] file with HTTP or as plain text, PostScript, "
+"PDF, etc. from the https://download.freebsd.org/doc/[FreeBSD FTP server].  "
+"You may also want to link:https://www.FreeBSD.org/search/[Search the FAQ]."
 msgstr ""
 "Эта статья посвящена часто задаваемым вопросам (FAQ) по спискам рассылки "
 "FreeBSD. Если вы хотите помочь поддерживать данный документ, напишите письмо "
-"в {freebsd-doc}. Последняя версия данного документа доступна на link:.[WWW "
-"сервере FreeBSD]. Вы можете получить данную статью в виде одного большого "
-"link:.[HTML] файла, используя HTTP протокол или в виде простого текста, "
-"форматов PostScript, PDF, и других с https://download.freebsd.org/doc/[FTP "
-"сервера FreeBSD]. Возможно вы захотите link:https://www.FreeBSD.org/search/["
-"Найти FAQ]."
+"в {freebsd-doc}. Последняя версия данного документа доступна на extref"
+":{mailing-list-faq}[WWW сервере FreeBSD]. Вы можете получить данную статью в "
+"виде одного большого extref:{mailing-list-faq}[HTML] файла, используя HTTP "
+"протокол или в виде простого текста, форматов PostScript, PDF, и других с "
+"https://download.freebsd.org/doc/[FTP сервера FreeBSD]. Возможно вы захотите "
+"link:https://www.FreeBSD.org/search/[Найти FAQ]."
 
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:51
@@ -128,8 +126,8 @@ msgid ""
 msgstr ""
 "Это зависит от регламента каждой конкретной рассылки. Некоторые списки "
 "больше ориентированы на разработчиков, некоторые - на всё сообщество FreeBSD "
-"в целом. Актуальную информацию смотрите по ссылке: link:https://lists.FreeBSD"
-".org/[этот список]."
+"в целом. Актуальную информацию смотрите по ссылке: link:https://lists."
+"FreeBSD.org/[этот список]."
 
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:75
@@ -230,14 +228,15 @@ msgstr "Доступны ли архивы?"
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:103
 msgid ""
-"Yes. Threaded archives with all e-mails since 1994 are available "
-"link:https://mail-archive.freebsd.org/mail/[here].  You can also access "
-"https://lists.freebsd.org/pipermail[mailman archive] and link:https://"
-"lists.freebsd.org/archives[mlmmj archive] directly."
+"Yes. Threaded archives with all e-mails since 1994 are available link:"
+"https://mail-archive.freebsd.org/mail/[here].  You can also access https://"
+"lists.freebsd.org/pipermail[mailman archive] and link:https://lists.freebsd."
+"org/archives[mlmmj archive] directly."
 msgstr ""
 "Да. Архивы со всеми письмами с 1994 года доступны link:https://mail-archive."
-"freebsd.org/mail/[здесь]. Вот ссылки на https://lists.freebsd.org/pipermail["
-"архив mailman] и link:https://lists.freebsd.org/archives[архив mlmmj]."
+"freebsd.org/mail/[здесь]. Вот ссылки на https://lists.freebsd.org/"
+"pipermail[архив mailman] и link:https://lists.freebsd.org/archives[архив "
+"mlmmj]."
 
 #. type: Title ===
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:104
@@ -289,8 +288,8 @@ msgid ""
 msgstr ""
 "Вы уже сделали важный шаг, решив прочитать эту статью. Если вы новичок во "
 "FreeBSD, то сначала ознакомьтесь с программным обеспечением и связанной с "
-"нею документацией, включающей множество extref:https://www.FreeBSD.org/docs/["
-"книг и статьей]. Могут быть интересными: extref:{faq}[Часто задаваемые "
+"нею документацией, включающей множество extref:https://www.FreeBSD.org/docs/"
+"[книг и статьей]. Могут быть интересными: extref:{faq}[Часто задаваемые "
 "вопросы по FreeBSD (FAQ)], extref:{handbook}[Руководство по FreeBSD], и "
 "статьи extref:{freebsd-questions-article}[Как работать со списком рассылки "
 "FreeBSD-questions с максимальной отдачей], extref:{explaining-bsd}[Что такое "
@@ -492,8 +491,8 @@ msgstr ""
 "трудно, и здесь легко сделать ошибку. Чтобы послать содержимое файлов "
 "протоколов, сделайте копию файла и воспользуйтесь редактором для того, чтобы "
 "обрезать информацию, оставив только относящуюся к делу, либо скопируйте и "
-"вставьте текст в ваше сообщение. В случае вывода программ, таких, как `dmesg`"
-", перенаправьте вывод в файл и включите его в письмо. Например,"
+"вставьте текст в ваше сообщение. В случае вывода программ, таких, как "
+"`dmesg`, перенаправьте вывод в файл и включите его в письмо. Например,"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:154
@@ -521,18 +520,16 @@ msgstr ""
 "При использовании операций копирования и вставки учтите, что некоторые такие "
 "операции отрицательно сказываются на формате строк. Особенно это стоит "
 "учесть при посылке содержимого файлов [.filename]#Makefile#, где `tab` "
-"является важным символом. Это довольно часто встречающаяся проблема в "
-"link:https://www.FreeBSD.org/support/[ базе данных сообщений об ошибках]. В ["
-".filename]#Makefile# символы tab меняются на пробелы, или раздражающие `=3B` "
+"является важным символом. Это довольно часто встречающаяся проблема в link:"
+"https://www.FreeBSD.org/support/[ базе данных сообщений об ошибках]. В [."
+"filename]#Makefile# символы tab меняются на пробелы, или раздражающие `=3B` "
 "escape последовательности."
 
 #. type: Title ===
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:159
 #, no-wrap
 msgid "What are the special etiquette consideration when replying to an existing posting on the mailing lists?"
-msgstr ""
-"Каких правил этикета стоит придерживаться при ответе на уже существующее "
-"сообщение?"
+msgstr "Каких правил этикета стоит придерживаться при ответе на уже существующее сообщение?"
 
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:162
@@ -548,8 +545,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:164
 msgid ""
-"This is especially important for postings of the type \"yes, I see this "
-"too\", where the initial posting was dozens or hundreds of lines."
+"This is especially important for postings of the type \"yes, I see this too"
+"\", where the initial posting was dozens or hundreds of lines."
 msgstr ""
 "Это особенно важно для ответов в стиле «Да, я это тоже вижу», где исходное "
 "сообщение составляло сотни строчек."
@@ -634,10 +631,10 @@ msgstr ""
 msgid ""
 "The best method to avoid this is to familiarize yourself with the http://"
 "docs.FreeBSD.org/mail/[mailing list archives], to help yourself understand "
-"the background of what has gone before.  In this, the https://"
-"www.FreeBSD.org/search/#mailinglists[mailing list search interface] is "
-"invaluable.  (If that method does not yield useful results, please "
-"supplement it with a search with your favorite major search engine)."
+"the background of what has gone before.  In this, the https://www.FreeBSD."
+"org/search/#mailinglists[mailing list search interface] is invaluable.  (If "
+"that method does not yield useful results, please supplement it with a "
+"search with your favorite major search engine)."
 msgstr ""
 "Лучший способ предотвратить это - ознакомиться с http://docs.FreeBSD.org/"
 "mail/[архивами списков рассылки], чтобы понять, что происходило до этого. В "
