--- a/documentation/content/ru/articles/serial-uart/_index.adoc
+++ b/documentation/content/ru/articles/serial-uart/_index.adoc
@@ -760,7 +760,7 @@ _Предоставлено `{whiteside}`. 26 августа 1995._
 
 Важное замечание — реальные микросхемы UART для Boca 16 находятся в соединительной коробке, а не на внутренней плате. Поэтому, если она отключена, попытки проверить эти порты завершатся неудачей. Я никогда не проверял загрузку с отключённой коробкой и последующим её подключением, и не рекомендую вам этого делать.
 
-Если у вас ещё нет настроенного файла конфигурации пользовательского ядра, обратитесь к extref:{handbook}[Конфигурация ядра, kernelconfig] в руководстве FreeBSD для получения общих инструкций. Ниже приведены конкретные настройки для платы Boca 16, предполагается, что вы используете ядро с именем MYKERNEL и редактируете его с помощью vi.
+Если у вас ещё нет настроенного файла конфигурации пользовательского ядра, обратитесь к extref:{handbook}kernelconfig[Конфигурация ядра, kernelconfig] в руководстве FreeBSD для получения общих инструкций. Ниже приведены конкретные настройки для платы Boca 16, предполагается, что вы используете ядро с именем MYKERNEL и редактируете его с помощью vi.
 
 [.procedure]
 ====
