--- a/documentation/content/ru/articles/filtering-bridges/_index.po
+++ b/documentation/content/ru/articles/filtering-bridges/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-01-17 20:35-0300\n"
-"PO-Revision-Date: 2025-09-26 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-09 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesfiltering-bridges_index/ru/>\n"
@@ -22,9 +22,7 @@ msgstr ""
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:1
 #, no-wrap
 msgid "Configuring firewalls and filtering on FreeBSD hosts acting as bridges rather than routers"
-msgstr ""
-"Настройка межсетевых экранов и фильтрации на хостах FreeBSD, выступающих в "
-"роли мостов, а не маршрутизаторов"
+msgstr "Настройка межсетевых экранов и фильтрации на хостах FreeBSD, выступающих в роли мостов, а не маршрутизаторов"
 
 #. type: Title =
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:1
@@ -208,12 +206,13 @@ msgstr ""
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:100
 msgid ""
 "Now it is necessary to build and install the new kernel.  You may find "
-"detailed instructions in the extref:{handbook}[Building and Installing a "
-"Custom Kernel, kernelconfig-building] section of the FreeBSD Handbook."
+"detailed instructions in the extref:{handbook}kernelconfig[Building and "
+"Installing a Custom Kernel, kernelconfig-building] section of the FreeBSD "
+"Handbook."
 msgstr ""
 "Теперь необходимо собрать и установить новое ядро. Подробные инструкции "
-"можно найти в разделе extref:{handbook}[Сборка и установка пользовательского "
-"ядра, kernelconfig-building] руководства FreeBSD."
+"можно найти в разделе extref:{handbook}kernelconfig[Сборка и установка "
+"пользовательского ядра, kernelconfig-building] руководства FreeBSD."
 
 #. type: Title ===
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:102
@@ -268,8 +267,8 @@ msgid ""
 "configuration will avoid you to remain isolated from the network).  Put "
 "these lines in [.filename]#/etc/rc.conf#:"
 msgstr ""
-"Прежде чем перезагрузиться для загрузки нового ядра или необходимых модулей ("
-"в соответствии с выбранным ранее методом установки), необходимо внести "
+"Прежде чем перезагрузиться для загрузки нового ядра или необходимых модулей "
+"(в соответствии с выбранным ранее методом установки), необходимо внести "
 "некоторые изменения в конфигурационный файл [.filename]#/etc/rc.conf#.  "
 "Правило по умолчанию для межсетевого экрана — отклонять все IP-пакеты.  "
 "Изначально мы настроим `открытый` межсетевой экран, чтобы проверить его "
@@ -359,8 +358,8 @@ msgstr ""
 "Чтобы обеспечить связь между двумя хостами, разделёнными мостом, необходимо, "
 "чтобы мост передавал ARP-пакеты. Этот протокол не включён в уровень IP, так "
 "как он существует только при работе IP поверх Ethernet. Межсетевой экран "
-"FreeBSD фильтрует исключительно на уровне IP, поэтому все не-IP пакеты ("
-"включая ARP) будут передаваться без фильтрации, даже если межсетевой экран "
+"FreeBSD фильтрует исключительно на уровне IP, поэтому все не-IP пакеты "
+"(включая ARP) будут передаваться без фильтрации, даже если межсетевой экран "
 "настроен на запрет всего."
 
 #. type: Plain text
@@ -397,8 +396,8 @@ msgid ""
 "commands (having the shrewdness to replace the names of the two network "
 "interfaces [.filename]#fxp0# and [.filename]#xl0# with your own ones):"
 msgstr ""
-"На этом этапе, чтобы включить мост, необходимо выполнить следующие команды ("
-"с учётом замены имён двух сетевых интерфейсов [.filename]#fxp0# и [."
+"На этом этапе, чтобы включить мост, необходимо выполнить следующие команды "
+"(с учётом замены имён двух сетевых интерфейсов [.filename]#fxp0# и [."
 "filename]#xl0# на ваши собственные):"
 
 #. type: delimited block . 4
@@ -474,8 +473,8 @@ msgstr ""
 "фильтруемых мостом, можно использовать только команды `pass` или `drop`. "
 "Более сложные действия, такие как `divert`, `forward` или `reject`, "
 "недоступны. Такие опции всё ещё можно использовать, но только для трафика, "
-"направленного на саму машину моста или исходящего от неё (если у неё есть "
-"IP-адрес)."
+"направленного на саму машину моста или исходящего от неё (если у неё есть IP-"
+"адрес)."
 
 #. type: Plain text
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:185
@@ -730,10 +729,10 @@ msgid ""
 "There are two rules for passing SMTP and DNS traffic towards the mail server "
 "and the name server, if you have them.  Obviously the whole rule set should "
 "be flavored to personal taste, this is only a specific example (rule format "
-"is described accurately in the man:ipfw[8] man page).  Note that for "
-"\"relay\" and \"ns\" to work, name service lookups must work _before_ the "
-"bridge is enabled.  This is an example of making sure that you set the IP on "
-"the correct network card.  Alternatively it is possible to specify the IP "
+"is described accurately in the man:ipfw[8] man page).  Note that for \"relay"
+"\" and \"ns\" to work, name service lookups must work _before_ the bridge is "
+"enabled.  This is an example of making sure that you set the IP on the "
+"correct network card.  Alternatively it is possible to specify the IP "
 "address instead of the host name (required if the machine is IP-less)."
 msgstr ""
 "Существует два правила для пропуска SMTP и DNS-трафика к почтовому серверу и "
